# Af-apparel-backend

./: .env.example  Dockerfile  Procfile  alembic.ini  celerybeat-schedule  celeryconfig.py  pyproject.toml  railway.json  requirements.txt
app/: main.py
app/core/: celery.py  config.py  database.py  exceptions.py  redis.py  security.py
app/middleware/: audit_middleware.py  auth_middleware.py  pricing_middleware.py
app/models/: __init__.py  base.py  communication.py  company.py  discount.py  discount_group.py  inventory.py  order.py  pricing.py  product.py  rma.py  shipping.py  statement.py  system.py  user.py  wholesale.py
app/schemas/: account.py  auth.py  cart.py  company.py  discount.py  email.py  inventory.py  order.py  pricing.py  product.py  review.py  shipping.py  system.py  wholesale.py
app/seeds/: run_seeds.py  seed_products.py
app/services/: auth_service.py  cart_service.py  company_service.py  email_service.py  inventory_service.py  order_service.py  payment_service.py  pdf_service.py  pricelist_service.py  pricing_service.py  (+5 more)
migrations/: add_review_image_url.sql  env.py  product_reviews_table.sql  shipping_tier_enhancements.sql
scripts/: seed_data.py
tests/: conftest.py  test_abandoned_carts.py  test_account_profile.py  test_addresses.py  test_admin_orders.py  test_cart.py  test_change_password.py  test_checkout.py  test_contacts.py  test_critical_endpoints.py  test_inventory_report.py  test_manage_users.py  test_order_pdfs.py  test_orders.py  test_payment_methods.py  test_qb_payments.py  test_resend_emails.py  test_statements.py
(+59 files in other folders)
